add page projects

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <section id="home">
         <div class="wrapper-home">
             <div class="container-img">
-                <img src="assets/ft3.png" alt="">
+                <img src="assets/ft-home.png" alt="">
             </div>
     
             <div class="container-text">
@@ -138,6 +138,8 @@
             <div class="container-projetos">
             </div>
         </div>
+
+        <button id="ver-mais" class="btn-ver-mais">Ver mais <i class="fas fa-chevron-right"></i></button>
     </section>
 
     <!-- Rodapé -->
@@ -167,6 +169,7 @@
 
     <script src="https://kit.fontawesome.com/73b3f70564.js" crossorigin="anonymous"></script>
     <script src="/js/menu.js"></script>
+    <script src="/js/redi-page.js"></script>
     <script src="/js/cards-projetos.js"></script>
 </body>
 </html>
