arrumando nome portifolio

--- a/projetos.html
+++ b/projetos.html
@@ -23,7 +23,7 @@
 
     <header id="cabecalho">
         <div class="logo">
-            <a href="/index.html#home"><h2>Portfólio</h2></a>
+            <a href="/index.html#home"><h2>Portifólio</h2></a>
         </div>
 
         <div class="menu-mobile">
