--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="/css/projetos.css">
     <link rel="stylesheet" href="/css/contatos.css">
 
-    <title>Portfólio</title>
+    <title>Portifólio</title>
 </head>
 <body>
 
@@ -26,7 +26,7 @@
 
     <header id="cabecalho">
         <div class="logo">
-            <a href="#home"><h2>Portfólio</h2></a>
+            <a href="#home"><h2>Portifólio</h2></a>
         </div>
 
         <div class="menu-mobile">
@@ -147,7 +147,7 @@
     <footer id="contatos">
         <div class="wrapper-contatos">
             <div class="logo">
-                <a href="#home"><h2>Portfólio</h2></a>
+                <a href="#home"><h2>Portifólio</h2></a>
             </div>
 
             <div class="contato__contatos">
