adicionando page projetos/adicionando bgc linera

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
 
     <link rel="shortcut icon" href="/assets/icon.png" type="image/x-icon">
 
@@ -170,6 +173,6 @@
     <script src="https://kit.fontawesome.com/73b3f70564.js" crossorigin="anonymous"></script>
     <script src="/js/menu.js"></script>
     <script src="/js/redi-page.js"></script>
-    <script src="/js/cards-projetos.js"></script>
+    <script src="/js/cards-index.js"></script>
 </body>
 </html>
