--- a/projetos.html
+++ b/projetos.html
@@ -46,8 +46,14 @@
         </div>
     </header>
 
-    <section class="center">
-        <h1>Em Produção...</h1>
+    <section id="projetos">
+        <header id="cabecalho-projetos">
+            <h1>Projetos</h1>
+        </header>
+        <div class="wrapper wrapper-projetos">
+            <div class="container-projetos">
+            </div>
+        </div>
     </section>
 
     <footer id="contatos">
@@ -58,8 +64,8 @@
 
             <div class="contato__contatos">
                 <ul>
-                    <li>+55 (63) 99235-1977</li>
-                    <li>luisj2felipe09@gmail.com</li>
+                    <li><i class="fas fa-phone"></i> +55 (63) 99235-1977</li>
+                    <li><i class="fas fa-envelope"></i> luisj2felipe09@gmail.com</li>
                 </ul>
             </div>
 
@@ -73,5 +79,6 @@
 
     <script src="https://kit.fontawesome.com/73b3f70564.js" crossorigin="anonymous"></script>
     <script src="/js/menu.js"></script>
+    <script src="/js/cards-projetos.js"></script>
 </body>
 </html>
