melhorando adiçao de cor e widht

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     
             <div class="container-text">
                 <h1>Luis Felipe</h1>
-                <h3>Developer</h3>
+                <h3>Developer Front-end</h3>
                 <a class="btn-cv" href="/arquivos/curriculo.pdf" download="Curriculo-Luis">Download CV</a>
             </div>
         </div>
