--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="container-text">
                 <h1>Luis Felipe</h1>
                 <h3>Developer Front-end</h3>
-                <a class="btn-cv" href="/arquivos/curriculo.pdf" download="Curriculo-Luis">Download CV</a>
+                <a class="btn-cv" href="/arquivos/Currículo.pdf" download="Curriculo-Luis">Download CV</a>
             </div>
         </div>
     </section>
