Alterando nivel de linguagem

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="card c-python">
                    <div class="title-card">
                         <i class="fab fa-python"></i>
-                        <h3>Intermediário</h3>
+                        <h3>Básico</h3>
                    </div>
                    <div class="text-content">
                         <h3>
@@ -89,7 +89,7 @@
                 <div class="card c-html">
                     <div class="title-card">
                         <i class="fab fa-html5"></i>
-                    <h3>Intermediário</h3>
+                    <h3>Básico</h3>
                     </div>
                     <div class="text-content">
                         <h3>
