alteraçao nas skills/add title

--- a/projetos.html
+++ b/projetos.html
@@ -47,7 +47,7 @@
     </header>
 
     <section id="projetos">
-        <header id="cabecalho-projetos">
+        <header class="title-section">
             <h1>Projetos</h1>
         </header>
         <div class="wrapper wrapper-projetos">
