--- a/projetos.html
+++ b/projetos.html
@@ -10,12 +10,7 @@
 
     <link rel="shortcut icon" href="/assets/icon.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="/css/cores.css">
-    <link rel="stylesheet" href="/css/global.css">
-    <link rel="stylesheet" href="/css/header.css">
-    <link rel="stylesheet" href="/css/projetos.css">
-    <link rel="stylesheet" href="/css/contatos.css">
-    <link rel="stylesheet" href="/css/page-projetos.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <title>Projetos</title>
 </head>
