new bars not with btns

--- a/index.html
+++ b/index.html
@@ -102,9 +102,7 @@
                 <div class="card c-js">
                     <div class="content-card">
                         <i class="fab fa-js"></i>
-                        <h3>
-JavaScript ES6
-                        </h3>
+                        <h3>JavaScript ES6</h3>
 
                     </div>
                 </div>
@@ -123,7 +121,9 @@ JavaScript ES6
             </div>
         </div>
 
-        <button id="ver-mais" class="btn-ver-mais">Ver mais <i class="fas fa-chevron-right"></i></button>
+        <button id="ver-mais" class="btn-ver-mais">
+            <a href="projetos.html">Ver mais <i class="fas fa-chevron-right"></i></a>
+        </button>
     </section>
 
     <!-- Rodapé -->
