--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap" rel="stylesheet">
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="/assets/icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/assets/img/icon.png" type="image/x-icon">
 
     <!-- css -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
     <title>Portifólio</title>
 </head>
@@ -58,7 +58,7 @@
     <section id="home">
         <div class="wrapper-home">
             <div class="container-img">
-                <img src="assets/ft-home.png" alt="">
+                <img src="assets/img/ft-home.png" alt="">
             </div>
 
             <div class="container-text">
@@ -156,10 +156,9 @@
     <!-- Script -->
 
     <script src="https://kit.fontawesome.com/73b3f70564.js" crossorigin="anonymous"></script>
-    <script src="/js/menu.js"></script>
-    <script src="/js/redi-page.js"></script>
-    <script src="/js/cards-index.js"></script>
-    <script src="/js/anima-scroll.js"></script>
+    <script src="assets/js/menu.js"></script>
+    <script type="module" src="assets/js/cards-index.js"></script>
+    <script src="assets/js/anima-scroll.js"></script>
 </body>
 
 </html>
