--- a/projetos.html
+++ b/projetos.html
@@ -12,7 +12,7 @@
 
     <link rel="shortcut icon" href="/assets/icon.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
     <title>Projetos</title>
 </head>
@@ -75,7 +75,7 @@
     </footer>
 
     <script src="https://kit.fontawesome.com/73b3f70564.js" crossorigin="anonymous"></script>
-    <script src="/js/menu.js"></script>
-    <script src="/js/cards-projetos.js"></script>
+    <script src="assets/js/menu.js"></script>
+    <script type="module" src="assets/js/cards-projetos.js"></script>
 </body>
 </html>
