--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
     <!-- css -->
     <link rel="stylesheet" href="assets/css/style.css">
 
+    <!-- JS -->
+    <script>
+        document.documentElement.className += ' js'
+    </script>
+
     <title>Portifólio</title>
 </head>
 
@@ -57,7 +62,7 @@
 
     <section id="home">
         <div class="wrapper-home">
-            <div class="container-img">
+            <div class="container-img anima-left" data-js="anima-left">
                 <img src="assets/img/ft-home.png" alt="">
             </div>
 
@@ -74,7 +79,7 @@
         <header class="title-section">
             <h1>Skills</h1>
         </header>
-        <div class="wrapper-skills">
+        <div class="wrapper-skills anima-left" data-js="anima-left">
             <div class="skills">
                 <div class="card c-python">
                     <div class="content-card">
