--- a/projetos.html
+++ b/projetos.html
@@ -8,11 +8,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap" rel="stylesheet">
 
     <link rel="shortcut icon" href="/assets/icon.png" type="image/x-icon">
 
     <link rel="stylesheet" href="assets/css/style.css">
+
+    <!-- JS -->
+    <script>
+        document.documentElement.className += ' js'
+    </script>
 
     <title>Projetos</title>
 </head>
@@ -77,5 +82,6 @@
     <script src="https://kit.fontawesome.com/73b3f70564.js" crossorigin="anonymous"></script>
     <script src="assets/js/menu.js"></script>
     <script type="module" src="assets/js/cards-projetos.js"></script>
+    <script type="module" src="assets/js/anima-scroll.js"></script>
 </body>
 </html>
