add two projets/ add skill react

--- a/index.html
+++ b/index.html
@@ -111,6 +111,13 @@
 
                     </div>
                 </div>
+
+                <div class="card c-react">
+                    <div class="content-card">
+                        <i class="fab fa-react"></i>
+                        <h3>React.js</h3>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
