--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#skills">Skills</a></li>
-                <li><a href="#projetos">Projetos</a></li>
+                <li><a href="/projetos.html">Projetos</a></li>
                 <li><a href="#contatos">Contatos</a></li>
             </ul>
         </div>
@@ -150,8 +150,8 @@
 
             <div class="contato__contatos">
                 <ul>
-                    <li>+55 (63) 99235-1977</li>
-                    <li>luisj2felipe09@gmail.com</li>
+                    <a style="color: white;" href="mailto:luisj2felipe09@gmail.com"><li>luisj2felipe09@gmail.com</li></a>
+                    <a style="color: white;" href="tel:02163992351977"><li>+55 (63) 9 99235-1977</li></a>
                 </ul>
             </div>
 
