--- a/projetos.html
+++ b/projetos.html
@@ -28,6 +28,8 @@
             <a href="/index.html#home"><h2>Portifólio</h2></a>
         </div>
 
+        <span style="color: white">Migrando para <span style="color: #61DAFB; font-weight: 700;">React.js</span></span>
+
         <div class="menu-mobile">
             <input type="checkbox" name="menu" id="menu-mobile__input">
             <label for="menu-mobile__input">
@@ -66,8 +68,8 @@
 
             <div class="contato__contatos">
                 <ul>
-                    <li><i class="fas fa-phone"></i> +55 (63) 99235-1977</li>
-                    <li><i class="fas fa-envelope"></i> luisj2felipe09@gmail.com</li>
+                    <a style="color: white;" href="mailto:luisj2felipe09@gmail.com"><li>luisj2felipe09@gmail.com</li></a>
+                    <a style="color: white;" href="tel:02163992351977"><li>+55 (63) 9 99235-1977</li></a>
                 </ul>
             </div>
 
