--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </a>
         </div>
 
-        <span style="color: white">Migrando para <span style="color: #61DAFB; font-weight: 700;">React.js</span></span>
+        <span class="mensagem">Migrando para <span >React.js</span></span>
 
         <div class="menu-mobile">
             <input type="checkbox" name="menu" id="menu-mobile__input">
