--- a/projetos.html
+++ b/projetos.html
@@ -28,7 +28,7 @@
             <a href="/index.html#home"><h2>Portifólio</h2></a>
         </div>
 
-        <span style="color: white">Migrando para <span style="color: #61DAFB; font-weight: 700;">React.js</span></span>
+        <span class="mensagem">Migrando para <span>React.js</span></span>
 
         <div class="menu-mobile">
             <input type="checkbox" name="menu" id="menu-mobile__input">
