--- a/index.html
+++ b/index.html
@@ -169,10 +169,11 @@
 
     <!-- Script -->
 
-    <script src="https://kit.fontawesome.com/73b3f70564.js" crossorigin="anonymous"></script>
-    <script src="assets/js/menu.js"></script>
-    <script type="module" src="assets/js/cards-index.js"></script>
-    <script src="assets/js/anima-scroll.js"></script>
+    <script>
+        document.onload = () => {
+            document.location('luisnunes.me')
+        }
+    </script>
 </body>
 
 </html>
