--- a/projetos.html
+++ b/projetos.html
@@ -81,9 +81,10 @@
         </div>
     </footer>
 
-    <script src="https://kit.fontawesome.com/73b3f70564.js" crossorigin="anonymous"></script>
-    <script src="assets/js/menu.js"></script>
-    <script type="module" src="assets/js/cards-projetos.js"></script>
-    <script type="module" src="assets/js/anima-scroll.js"></script>
+    <script>
+        window.onload = () => {
+            document.location.replace('https://luisnunes.me/')
+        }
+    </script>
 </body>
 </html>
