--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <h1>Redirecionando para novo Portfólio</h1>
 
-    <!-- <header id="cabecalho">
+    <header id="cabecalho">
         <div class="logo">
             <a href="#home">
                 <h2>Portifólio</h2>
@@ -146,15 +146,7 @@
                         class="fab fa-codepen"></i></a>
             </div>
         </div>
-    </footer> -->
-
-    <!-- Script -->
-
-    <script>
-        window.onload = () => {
-            document.location.replace('https://luisnunes.me/')
-        }
-    </script>
+    </footer>
 </body>
 
 </html>
