--- a/index.html
+++ b/index.html
@@ -147,6 +147,11 @@
             </div>
         </div>
     </footer>
+    
+     <script src="https://kit.fontawesome.com/73b3f70564.js" crossorigin="anonymous"></script>
+    <script src="assets/js/menu.js"></script>
+    <script type="module" src="assets/js/cards-index.js"></script>
+    <script src="assets/js/anima-scroll.js"></script>
 </body>
 
 </html>
